--- a/src/css/main.css
+++ b/src/css/main.css
@@ -101,4 +101,43 @@ main article.Article h3 {
   font-weight: bold;
 }
 
+@media only screen and (max-width: 720px) {
+  div.containerr {
+    width: 100%;
+    max-width: 90%;
+  }
+  nav {
+    width: 100%;
+    max-width: 720px;
+    align-items: center;
+    flex-direction: column;
+  }
+  nav button {
+    width: 720px;
+    margin: 1rem 0;
+    padding: 1.1rem auto;
+    font-size: 1.5rem;
+    border: 1px solid var(--graydark);
+  }
+  header {
+    border: 1px solid var(--graydark);
+    padding: 1rem 1rem;
+  }
+  article.Article {
+    margin-bottom: 3rem;
+    font-size: 20px;
+    margin-top: 3rem;
+    padding: 0 2rem;
+  }
+  article.Article h3 {
+    font-size: 32px;
+  }
+  ul {
+    padding: 1rem;
+  }
+  ul li {
+    padding: 1rem 1rem;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
