--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -125,3 +125,53 @@ main{
   }
 }
 
+@media only screen and (max-width: 720px){
+  div.containerr{
+      width: 100%;
+      max-width: 90%;
+  }
+
+  nav{
+      width:100%;
+      max-width: 720px;
+      align-items: center;
+      flex-direction: column;
+
+      button{
+        width: 720px;
+        margin: 1rem 0;
+        padding: 1.1rem auto;
+        font-size: 1.5rem;
+        border: 1px solid var(--graydark);
+    }
+  }
+
+  header{
+      border: 1px solid var(--graydark);
+      padding: 1rem 1rem;
+  }
+
+ 
+
+
+  article.Article{
+      border-top: 1px solid var(--graydark);
+      margin-bottom: 3rem;
+      font-size: 20px;
+      margin-top:3rem;
+      padding: 0 2rem;
+
+      h3{
+        font-size: 32px;
+    }
+  }
+
+  ul{
+      padding: 1rem;
+
+      li{
+        padding: 1rem 1rem;
+    }
+  }
+}
+
